@@ -22,6 +22,8 @@
 #ifndef INCL_SCALE_HQ2X_H
 #define INCL_SCALE_HQ2X_H	1
 
+#ifdef USE_HQ2X_SCALER
+
 /** 
  ** Note: This file should only be included by source files that use the
  ** templates below; the templates will only be instantiated when they
@@ -2783,4 +2785,6 @@ void Scale_Hq2x
 		}
 	}
 
-#endif
+#endif //USE_HQ2X_SCALER
+
+#endif //INCL_SCALE_HQ2X_H
